--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>Burgers!</h1>
 
-<h2>Burgers I have DEVOURED!</h2>
+<h2>DEVOURED!</h2>
 
 <ul>
     {{#each burgers}}
@@ -10,7 +10,7 @@
     {{/each}}
 </ul>
 
-<h2>Burgers that I have yet to DEVOUR!</h2>
+<h2>To be DEVOURED!</h2>
 
 <ul>
     {{#each burgers}}
