--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,9 @@
 
 <ul>
     {{#each burgers}}
-        {{#unless devoured}}
-            {{!-- {{> burgers/burger-block devoured=true}} --}}
-        {{/unless}}
+        {{#if devoured}}
+            {{> burgers/burger-block devoured=true}}
+        {{/if}}
     {{/each}}
 </ul>
 
@@ -14,9 +14,9 @@
 
 <ul>
     {{#each burgers}}
-        {{#if devour}}
+        {{#unless devoured}}
             {{> burgers/burger-block devoured=false}}
-        {{/if}}
+        {{/unless}}
     {{/each}}
 </ul>
 
@@ -27,7 +27,7 @@
         <input type="text" id="ca" name="name">
     </div>
     <div class="form-group">
-        <label for="devour">Devoured?</label><br>
+        <label for="devoured">Devoured?</label><br>
         <input type="radio" name="devoured" value="1" checked> Devoured!<br>
         <input type="radio" name="devoured" value="0">Not devoured
     </div>
