--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,20 +1,36 @@
 li {
     padding: 5px;
     margin: 5px;
-    background: #faebd7;
+    list-style: none;
   }
   
-  .label {
-    font-weight: bold;
-  }
-  
-  .create-update-form {
-    padding: 5px;
-    margin: 5px;
-    background: aqua;
-  }
   
   .form-group {
     margin-bottom: 5px;
   }
   
+  body {
+    background: url("../images/burgersnbeers.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: black;
+    font-family: 'Nunito', sans-serif;
+    padding-bottom: 40px;
+}
+
+.container {
+  background-color: rgba(255,255,255,0.6);
+  color: #black;
+  text-align: center;
+  background-size: contain;
+  background-position: top right;
+  background-repeat: no-repeat;
+}
+
+h1 {
+  background-color: rgba(255,255,255,0.4);
+  text-align: center;
+  margin: 90px;
+}
