--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,46 @@
-<h1>Burgers!</h1>
+<h1>Burgers N' Beers!</h1>
 
-<h2>DEVOURED!</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#if devoured}}
-            {{> burgers/burger-block devoured=true}}
-        {{/if}}
-    {{/each}}
-</ul>
-
-<h2>To be DEVOURED!</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#unless devoured}}
-            {{> burgers/burger-block devoured=false}}
-        {{/unless}}
-    {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form action="/burgers/create" method="POST" class="create-form">
-    <div class="form-group">
-        <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h2>DEVOURED!</h2>
+      <ul>
+        {{#each burgers}}
+            {{#if devoured}}
+                {{> burgers/burger-block devoured=true}}
+            {{/if}}
+        {{/each}}
+      </ul>
     </div>
-    <div class="form-group">
-        <label for="devoured">Devoured?</label><br>
-        <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-        <input type="radio" name="devoured" value="0">Not devoured
+    <div class="col-sm">
+      <h2>To be DEVOURED!</h2>
+      <ul>
+        {{#each burgers}}
+            {{#unless devoured}}
+                {{> burgers/burger-block devoured=false}}
+            {{/unless}}
+        {{/each}}
+      </ul>
     </div>
-    <button type="submit">Devour</button>
-</form>
+  </div>
+   <div class="row">
+    <div class="col-sm">
+      <h2>Add a Burger</h2>
+        <form action="/burgers/create" method="POST" class="create-form">
+            <div class="form-group">
+                <label for="ca">Burger Name:</label>
+                <input type="text" id="ca" name="name">
+            </div>
+            <div class="form-group">
+                <label for="devoured">Devoured?</label><br>
+                <input type="radio" name="devoured" value="1" checked> Devoured!<br>
+                <input type="radio" name="devoured" value="0">Not devoured
+            </div>
+            <button type="submit">Devour</button>
+        </form>
+    </div>
+  </div>
+</div>
+
+
+
